+ Fixed warnings, completed dateutils

--- a/docs/fpc.sty
+++ b/docs/fpc.sty
@@ -163,6 +163,7 @@
 % Useful references.
 %
 \newcommand{\progref}{\htmladdnormallink{Programmers guide}{../prog/prog.html}\xspace}
+\newcommand{\fpdocref}{\htmladdnormallink{FPDoc reference guide}{../fpdoc/fpfoc.html}\xspace}
 \newcommand{\refref}{\htmladdnormallink{Reference guide}{../ref/ref.html}\xspace}
 \newcommand{\userref}{\htmladdnormallink{Users guide}{../user/user.html}\xspace}
 \newcommand{\unitsref}{\htmladdnormallink{Unit reference}{../units/units.html}\xspace}
@@ -195,6 +196,7 @@
 \newcommand{\atari}{\textsc{Atari}\xspace}
 \newcommand{\amiga}{\textsc{Amiga}\xspace}
 \newcommand{\solaris}{\textsc{Solaris}\xspace}
+\newcommand{\netware}{\textsc{Netware}\xspace}
 \newcommand{\qnx}{\textsc{QNX Realtime platform}\xspace}
 \newcommand{\beos}{\textsc{BeOS}\xspace}
 \newcommand{\palmos}{\textsc{PalmOS}\xspace}
