--- a/docs/rtl.tex
+++ b/docs/rtl.tex
@@ -38,6 +38,7 @@
 %
 \begin{document}
 \title{Run-Time Library (RTL) : \\ Reference guide.}
+\label{rtl}
 \docdescription{Reference guide for RTL units.}
 \docversion{1.9}
 \input{date.inc}
