+ Added searching of ../etc

--- a/install/man/man5/fpc.cfg.5
+++ b/install/man/man5/fpc.cfg.5
@@ -32,7 +32,9 @@ The compiler looks for the fpc.cfg file in the following places :
 .br
 \	\	     variable PPC\_CONFIG\_PATH, and if it's not
 .br
-\	\	     set under /etc.
+\	\	     set under compilerdir/../etc.
+.br
+\	\	\- If it is not yet found: in /etc.
 .PP
 \	\fI- Under all other OSes:\fP
 .br
