--- a/install/man/man1/unitdiff.1
+++ b/install/man/man1/unitdiff.1
@@ -1,4 +1,4 @@
-.TH makeskel 1 "14 November 2004" "Free Pascal" "FPC unit difference viewer"
+.TH unitdiff 1 "14 November 2004" "Free Pascal" "FPC unit difference viewer"
 .SH NAME
 unitdiff \- Describe differences in the interface of a FPC unit.
 
