--- a/install/debian/changelog
+++ b/install/debian/changelog
@@ -1,8 +1,8 @@
-fpc (1.9.5-0) unstable; urgency=low
+fpc (1.9.6-0) unstable; urgency=low
 
-  * Snapshot build
+  * New release
 
- -- Peter Vreman <peter@freepascal.org>  Thu, 30 Aug 2004 12:00:00 +0100
+ -- Peter Vreman <peter@freepascal.org>  Thu, 31 Dec 2004 12:00:00 +0100
 
 fpc (1.9.4-5) unstable; urgency=low
 
