--- a/install/man/man1/ppdep.1
+++ b/install/man/man1/ppdep.1
@@ -14,7 +14,7 @@ understood by GNU
 .B make
 . It writes these dependencies to standard 
 output. It takes care of dependencies both in the interface and 
-implemntation section of the unit, and it can handle conditional defines.
+implementation section of the unit, and it can handle conditional defines.
 
 .SH Usage
 
