+ Added bufstream example

--- a/fcl/tests/README
+++ b/fcl/tests/README
@@ -59,3 +59,4 @@ tstelgtk.pp  Test of eventlog unit, FPGTK version. Not built by default. (MVC)
 testur.pp    Test of TURIParser class. (MVC)
 testapp.pp   Test of TCustomApplication. (MVC)
 testcgi.pp   Test of TCGIApplication class. (MVC)
+testbs.pp    Test of TBufStream buffered stream (MVC)
