* build messages.inc from errore.msg   * new zip and tar targets   * use fpcmake generated Makefile

--- a/docs/user.tex
+++ b/docs/user.tex
@@ -3266,7 +3266,7 @@ messages is generated from he compiler source itself, and should be faitly
 complete. At this point, only assembler errors are not in the list.
 
 % Message file is generated with msg2inc.
-\input {messages.tex}
+\input {messages.inc}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Assembler reader errors
