* added -V to fpcmake.1

--- a/install/man/man1/fpcmake.1
+++ b/install/man/man1/fpcmake.1
@@ -1,10 +1,10 @@
-.TH fpcmake 1 "12 Dec 1999" "Free Pascal" "Free Pascal Makefile constructor"
+.TH fpcmake 1 "11 Jan 2005" "Free Pascal" "Free Pascal Makefile constructor"
 .SH NAME
 fpcmake \- The Free Pascal makefile constructor program.
 
 .SH SYNOPSIS
 
-.B fpcmake [-Ttarget] [-pwhrqv] [filename [filename [filename]]]
+.B fpcmake [-Ttarget] [-pwhrqvV] [filename [filename [filename]]]
 
 .SH DESCRIPTION
 
@@ -78,6 +78,11 @@ platforms.
 This option instructs
 .B fpcmake
 to be more verbose.
+.TP
+.B \-V
+Print
+.B fpcmake
+version and exit.
 .TP
 .B \-w
 This is the standard option and tells
