--- a/install/macos/README
+++ b/install/macos/README
@@ -2,7 +2,12 @@ To create a release, follow these steps:
 
 Build compiler and rtl by make cycle. (with MPW make)
 
-Run the MPW script 'prepare' to create an installer package (as a stuffit archive).
+Build the MacOS unit (located in rtl dir) (make macos with MPWMake)
+
+Run the MPW script 'prepare' (with version no as parameter) to create
+an installer package (as a stuffit archive). E. g.:
+
+  prepare 1.9.6
 
 The installer package will consist of:
 
