+ some key kombinations documented

--- a/docs/ide.tex
+++ b/docs/ide.tex
@@ -2565,6 +2565,8 @@ Last line of window & \key{Ctrl-End} & \key{Ctrl-Q-X} \\
 First line of file & \key{Ctrl-PageUp} & \key{Ctrl-Q-R} \\
 Last line of file & \key{Ctrl-PageDown} & \key{Ctrl-Q-C} \\
 Last cursor position & \key{Ctrl-Q-P} & \\
+Find matching block delimiter & \key{Ctrl-Q-\[} & \\
+Find last matching block delimiter & \key{Ctrl-Q-\]} & \\
 \end{FPCltable}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{FPCltable}{p{5cm}ll}{Edit}{shortcutsedit}
@@ -2599,6 +2601,9 @@ Insert text from clipboard & \key{Shift-Insert} & \\
 Insert file & \key{Ctrl-K-R} & \\
 Write selected text to file & \key{Ctrl-K-W} & \\
 Uppercase current block & \key{Ctrl-K-N} & \\
+Lowercase current block & \key{Ctrl-K-O} & \\
+Uppercase word & \key{Ctrl-K-E} & \\
+Lowercase word & \key{Ctrl-K-F} & \\
 \end{FPCltable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2640,7 +2645,10 @@ Undo & \key{Alt-Backspace} & \\
 \end{FPCltable}
 %
 %  $Log$
-%  Revision 1.8  2003-11-09 13:42:41  michael
+%  Revision 1.9  2005-03-08 18:13:15  florian
+%    + some key kombinations documented
+%
+%  Revision 1.8  2003/11/09 13:42:41  michael
 %  + Added note suggested by Florian that fp.dsk files may change between releases
 %
 %  Revision 1.7  2003/03/17 18:19:59  michael
