+ Many updates and missing identifiers

--- a/docs/prog.tex
+++ b/docs/prog.tex
@@ -2871,11 +2871,11 @@ Offset from frame pointer & What is stored \\ \hline
 
 Constructor and destructors have special invisible parameters
 which are passed to them. These invisible parameters are used
-internally to instanciate the objects and classes. 
+internally to instantiate the objects and classes. 
 
 \subsection{objects}
 
-The actual invisible declaration of an object constructoir
+The actual invisible declaration of an object constructor
 is as follows:
 
 \begin{verbatim}
