--- a/docs/ref.tex
+++ b/docs/ref.tex
@@ -392,6 +392,11 @@ parsed as 64-bit integer constants as of version 1.9.0. Earliers
 versions would convert it to a real-typed constant.
 \end{remark}
 
+\begin{remark}
+Note that Octal and Binary notation are not supported in TP or Delphi compatibility
+mode.
+\end{remark}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Labels
 \section{Labels}
